--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,5 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Android template
 # Built application files
 *.apk
 *.ap_
@@ -15,7 +17,6 @@ gen/
 # Gradle files
 .gradle/
 build/
-/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -26,5 +27,6 @@ proguard/
 # Log Files
 *.log
 
-.idea/
-*.iml
+# Android Studio Navigation editor temp files
+.navigation/
+
